"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/commands.c: In DeleteItem() properly handle more than one item.
Andreas Kirschbaum 2006-01-13

x11/png.c: Add same workaround from gtk/png.c to make it work on 64 bit
systems.
MSW 2006-01-01

Made item's nrof uint32, like server-side. Fix a crash in get_number if nrof < 0
 (not supposed to happen, server bug, but still).
Modified files:
 common/commands.c item.c item.h proto.h
Ryo 2005-12-27

gtk-v2/src/image.c: Remove call to free fog pixels (SDL) - with call in place,
   client crashes on double free in SDL mode after disconnecting from
   server.
MSW 2005-12-11

gtk/{map.c,sdl.c}, x11/x11.c: General cleanup - just whitespace changes.
Andreas Kirschbaum 2005-12-11

Apply patch 1352490 "newpickup rings/amulets client side" courtesy anonymous.
Modified files:
 gtk/gx11.c
Ryo 2005-11-12

common/player.c: Properly ignore received comc commands with invalid length.
gtk/gx11.c, gtk-v2/src/image.c: Initialize smooth_face field when allocating
   pixmaps array.
Andreas Kirschbaum 2005-11-02

Add support for newpickup PU_NOT_CURSED (ignore cursed items) flag.
--
gtk/gx11.c: Add flag #define and menu entry.
gtk-v2/gtk-v2.glade: Add menu entry.
gtk-v2/src/{callbacks.h,interface.c}: Rebuilt.
gtk-v2/src/gtk2proto.h: Add prototype for menu callback.
gtk-v2/src/pickup.c: Add #define and menu callback function.
Andreas Kirschbaum 2005-11-01

gtk/config.c: fallback to PIXMAP display mode when SDL is not built in.
Ryo 2005-11-01

Fix bug #1288647 (typing text in password mode). Now hidden input (for
password entry) is reliably turned off afterwards.
--
common/command.c: Enable hidden input before printing the query; this allows
   the gtk client to enable it in his callback function. Also: reset hidden
   input mode after sending a reply to the server.
gtk/gx11.c: Enable/disable hidden input in non-popup input area even if popup