@@ -998,6 +998,8 @@ static GtkWidget * get_look_widget() {
 
 itemlist look_list, inv_list;
 
+GtkWidget *closebutton;
+
 /* forward */
 static void close_container_callback(item *op);
 
@@ -1006,7 +1008,6 @@ void get_look_display(GtkWidget *frame)
 {
   GtkWidget *vbox1;
   GtkWidget *hbox1;
-  GtkWidget *closebutton;
   
   look_list.env = cpl.below;
   strcpy (look_list.title, "You see:");
@@ -1028,6 +1029,7 @@ void get_look_display(GtkWidget *frame)
   gtk_signal_connect_object (GTK_OBJECT (closebutton), "clicked",
 			       GTK_SIGNAL_FUNC(close_container_callback),
 			       NULL);
+  gtk_widget_set_sensitive(closebutton, False);
   gtk_box_pack_start (GTK_BOX(hbox1),closebutton, FALSE, FALSE, 2);
   gtk_widget_show (closebutton);
   gtk_tooltips_set_tip (tooltips, closebutton, 
@@ -1332,10 +1334,11 @@ void set_look_list_env(item * op) {
 }
 
 
-void open_container (item *op) 
-{
+void open_container (item *op) {
   set_look_list_env(op); 
   sprintf (look_list.title, "%s:", op->d_name);
+  gtk_widget_set_sensitive(closebutton, True);
+
   update_list_labels (&look_list);
 }
 
@@ -1346,6 +1349,7 @@ void close_container(item *op)
 	client_send_apply (look_list.env->tag);
     set_look_list_env(cpl.below);
     strcpy (look_list.title, "You see:");
+    gtk_widget_set_sensitive(closebutton, False);
     update_list_labels (&look_list);
   }
 }
@@ -1361,6 +1365,8 @@ static void close_container_callback(item *op)
     client_send_apply (look_list.env->tag);
     set_look_list_env(cpl.below);
     strcpy (look_list.title, "You see:");
+    gtk_widget_set_sensitive(closebutton, False);
+
     update_list_labels (&look_list);
   }
 }
